Added Loom Link to readme file

--- a/example1.html
+++ b/example1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="example_1.js"></script>
+    <script src="example_1.js" async></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example 2</title>
+    <title>Example 1</title>
 </head>
 <body>
     
